[Blink/SPv175] Fix child clipping mask snapping bug

The clip rect calculated by PaintLayerClipper already included all
paint offset. We inadvertantly added paint offset again to child
clipping mask bounds prior to this CL, resulting in subpixel
accumulation being counted twice. This CL fixes it.

As a side change, this CL also creates paint offset translation
for composited replaced elements. Previously we only create paint
offset translation for composited blocks, which broken assumptions
in other part of the code.

BUG=815358,808325

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I17ca32d366942e12f9364a42205d6fc44171bf9c
Reviewed-on: https://chromium-review.googlesource.com/974161
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545995}
Former-commit-id: 1aa123c1bc2c35f0b66a3457020a1a210f617798